[metadata]
name = searchf
version = 1.0
description = A text-based application running in terminals to search into text files
long_description = file: README.md
long_description_content_type =	text/markdown
keywords = search, file, curses
author = Adrien Felon
url = https://github.com/human3/searchf
license = Apache 2.0
[options]
package_dir =
    = src
packages = find:
scripts =
    bin/searchf
[options.packages.find]
where = src