[metadata]
name = searchf
version = attr: searchf.__version__
description = A text-based application running in terminals to search into text files
long_description = file: README.md
long_description_content_type =	text/markdown
keywords = search, file, terminal, console, highlighter, keyword, curses, utilities
author = Adrien Felon
url = https://github.com/human3/searchf
license = Apache 2.0
[options]
packages = find:
# For deps management see https://setuptools.pypa.io/en/latest/userguide/dependency_management.html
install_requires =
    windows-curses;platform_system=='Windows'
[options.package_data]
* = *.md, *.txt
[options.entry_points]
console_scripts:
    searchf=searchf.main:main
    searchf-test=searchf.test.all:test_main
